some changes again

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             
             <section id="right-header">
                 <div class="navbar-buttons">
-                    <a href="http://127.0.0.1:5500/index.html" class="is-active">
+                    <a href="http://seyfullahakgun.github.io/index.html" class="is-active">
                         <i class="fa-solid fa-house fa-xl"></i>
                         <p>Home</p>
                     </a>
